; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/pandora/extr_plat.c_pnd_setup_layer_.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/pandora/extr_plat.c_pnd_setup_layer_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omapfb_plane_info = type { i32, i32, i32, i32, i32, i32 }
%struct.omapfb_mem_info = type { i32, i32, i32, i32, i32, i32 }

@OMAPFB_QUERY_PLANE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"QUERY_PLANE\00", align 1
@OMAPFB_QUERY_MEM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"QUERY_MEM\00", align 1
@OMAPFB_SETUP_PLANE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [12 x i8] c"SETUP_PLANE\00", align 1
@LAYER_MEM_SIZE = common dso_local global i32 0, align 4
@OMAPFB_SETUP_MEM = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [10 x i8] c"SETUP_MEM\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [24 x i8] c"(requested %u, had %u)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32, i32)* @pnd_setup_layer_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pnd_setup_layer_(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.omapfb_plane_info, align 4
  %15 = alloca %struct.omapfb_mem_info, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 0, i32* %17, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @OMAPFB_QUERY_PLANE, align 4
  %22 = call i32 @ioctl(i32 %20, i32 %21, %struct.omapfb_plane_info* %14)
  store i32 %22, i32* %18, align 4
  %23 = load i32, i32* %18, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %6
  %26 = call i32 @perror(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %7, align 4
  br label %101

27:                                               ; preds = %6
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* @OMAPFB_QUERY_MEM, align 4
  %30 = bitcast %struct.omapfb_mem_info* %15 to %struct.omapfb_plane_info*
  %31 = call i32 @ioctl(i32 %28, i32 %29, %struct.omapfb_plane_info* %30)
  store i32 %31, i32* %18, align 4
  %32 = load i32, i32* %18, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %27
  %35 = call i32 @perror(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %7, align 4
  br label %101

36:                                               ; preds = %27
  %37 = getelementptr inbounds %struct.omapfb_plane_info, %struct.omapfb_plane_info* %14, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  store i32 %38, i32* %16, align 4
  %39 = load i32, i32* %16, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %52

41:                                               ; preds = %36
  %42 = getelementptr inbounds %struct.omapfb_plane_info, %struct.omapfb_plane_info* %14, i32 0, i32 0
  store i32 0, i32* %42, align 4
  %43 = load i32, i32* %8, align 4
  %44 = load i32, i32* @OMAPFB_SETUP_PLANE, align 4
  %45 = call i32 @ioctl(i32 %43, i32 %44, %struct.omapfb_plane_info* %14)
  store i32 %45, i32* %18, align 4
  %46 = load i32, i32* %18, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %41
  %49 = call i32 @perror(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  br label %51

50:                                               ; preds = %41
  store i32 0, i32* %16, align 4
  br label %51

51:                                               ; preds = %50, %48
  br label %52

52:                                               ; preds = %51, %36
  %53 = getelementptr inbounds %struct.omapfb_mem_info, %struct.omapfb_mem_info* %15, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = load i32, i32* @LAYER_MEM_SIZE, align 4
  %56 = icmp ult i32 %54, %55
  br i1 %56, label %57, label %76

57:                                               ; preds = %52
  %58 = getelementptr inbounds %struct.omapfb_mem_info, %struct.omapfb_mem_info* %15, i32 0, i32 1
  %59 = load i32, i32* %58, align 4
  store i32 %59, i32* %19, align 4
  %60 = load i32, i32* @LAYER_MEM_SIZE, align 4
  %61 = getelementptr inbounds %struct.omapfb_mem_info, %struct.omapfb_mem_info* %15, i32 0, i32 1
  store i32 %60, i32* %61, align 4
  %62 = load i32, i32* %8, align 4
  %63 = load i32, i32* @OMAPFB_SETUP_MEM, align 4
  %64 = bitcast %struct.omapfb_mem_info* %15 to %struct.omapfb_plane_info*
  %65 = call i32 @ioctl(i32 %62, i32 %63, %struct.omapfb_plane_info* %64)
  store i32 %65, i32* %18, align 4
  %66 = load i32, i32* %18, align 4
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %75

68:                                               ; preds = %57
  %69 = call i32 @perror(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0))
  %70 = load i32, i32* @stderr, align 4
  %71 = getelementptr inbounds %struct.omapfb_mem_info, %struct.omapfb_mem_info* %15, i32 0, i32 1
  %72 = load i32, i32* %71, align 4
  %73 = load i32, i32* %19, align 4
  %74 = call i32 @fprintf(i32 %70, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i64 0, i64 0), i32 %72, i32 %73)
  store i32 -1, i32* %7, align 4
  br label %101

75:                                               ; preds = %57
  br label %76

76:                                               ; preds = %75, %52
  %77 = load i32, i32* %10, align 4
  %78 = getelementptr inbounds %struct.omapfb_plane_info, %struct.omapfb_plane_info* %14, i32 0, i32 2
  store i32 %77, i32* %78, align 4
  %79 = load i32, i32* %11, align 4
  %80 = getelementptr inbounds %struct.omapfb_plane_info, %struct.omapfb_plane_info* %14, i32 0, i32 3
  store i32 %79, i32* %80, align 4
  %81 = load i32, i32* %12, align 4
  %82 = getelementptr inbounds %struct.omapfb_plane_info, %struct.omapfb_plane_info* %14, i32 0, i32 4
  store i32 %81, i32* %82, align 4
  %83 = load i32, i32* %13, align 4
  %84 = getelementptr inbounds %struct.omapfb_plane_info, %struct.omapfb_plane_info* %14, i32 0, i32 5
  store i32 %83, i32* %84, align 4
  %85 = load i32, i32* %9, align 4
  %86 = getelementptr inbounds %struct.omapfb_plane_info, %struct.omapfb_plane_info* %14, i32 0, i32 0
  store i32 %85, i32* %86, align 4
  %87 = load i32, i32* %8, align 4
  %88 = load i32, i32* @OMAPFB_SETUP_PLANE, align 4
  %89 = call i32 @ioctl(i32 %87, i32 %88, %struct.omapfb_plane_info* %14)
  store i32 %89, i32* %18, align 4
  %90 = load i32, i32* %18, align 4
  %91 = icmp eq i32 %90, 0
  br i1 %91, label %92, label %95

92:                                               ; preds = %76
  %93 = getelementptr inbounds %struct.omapfb_plane_info, %struct.omapfb_plane_info* %14, i32 0, i32 0
  %94 = load i32, i32* %93, align 4
  store i32 %94, i32* %16, align 4
  br label %97

95:                                               ; preds = %76
  %96 = call i32 @perror(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  store i32 -1, i32* %17, align 4
  br label %97

97:                                               ; preds = %95, %92
  %98 = load i32, i32* %16, align 4
  %99 = call i32 @plat_target_switch_layer(i32 1, i32 %98)
  %100 = load i32, i32* %17, align 4
  store i32 %100, i32* %7, align 4
  br label %101

101:                                              ; preds = %97, %68, %34, %25
  %102 = load i32, i32* %7, align 4
  ret i32 %102
}

declare dso_local i32 @ioctl(i32, i32, %struct.omapfb_plane_info*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @plat_target_switch_layer(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
